2003-09-10	blytkerchan
	* AUTHORS: new file
	* TODO: ditto
	